--- a/static/src/style.tailwind.css
+++ b/static/src/style.tailwind.css
@@ -14,6 +14,11 @@ footer {
     @apply w-full px-4 py-2 mt-1 rounded bg-sky-50 dark:bg-slate-700;
 }
 
+select.field {
+    @apply w-full px-4 py-2 mt-1 rounded bg-sky-50 dark:bg-slate-700;
+    border-right: 1rem solid transparent;
+}
+
 .spinner {
     visibility: hidden;
 }
